--- a/ARTesting/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/ARTesting/Experience.rcproject/com.apple.RCFoundation.Project
@@ -776,6 +776,92 @@
                     }
                   },
                   "7F5F1ADC-E5E4-4EF5-A5B5-FC43B071FFA5" : null,
+                  "8C002010-AE27-4F43-9C06-2C65FB1D535E" : {
+                    "overrides" : {
+                      "arguments" : [
+                        [
+                          "depth",
+                          {
+                            "typeName" : "Double",
+                            "value" : 0.26579055337558355
+                          }
+                        ],
+                        [
+                          "height",
+                          {
+                            "typeName" : "Double",
+                            "value" : 0.0019999999999999879
+                          }
+                        ],
+                        [
+                          "material",
+                          {
+                            "typeName" : "String",
+                            "value" : "standard"
+                          }
+                        ],
+                        [
+                          "materialColor",
+                          {
+                            "typeName" : "double4",
+                            "value" : [
+                              0.14000000059604645,
+                              0.69999998807907104,
+                              0.14000000059604645,
+                              1
+                            ]
+                          }
+                        ],
+                        [
+                          "type",
+                          {
+                            "typeName" : "String",
+                            "value" : "box"
+                          }
+                        ],
+                        [
+                          "width",
+                          {
+                            "typeName" : "Double",
+                            "value" : 0.23731913383198239
+                          }
+                        ]
+                      ],
+                      "factory" : {
+                        "identifier" : "com.apple.rc.af.CoreAssetFactories.PrimitiveShapeAssetFactory",
+                        "version" : "1.0"
+                      },
+                      "runtimeAttributes" : [
+                        [
+                          "RuntimeIdentifier",
+                          {
+                            "typeName" : "UUID",
+                            "value" : "C3F8FA78-6274-44FA-A699-9D1EA2410BC2"
+                          }
+                        ]
+                      ]
+                    },
+                    "transform" : {
+                      "matrix" : [
+                        1.4992537498474121,
+                        0,
+                        0,
+                        0,
+                        0,
+                        1.4992537498474121,
+                        0,
+                        0,
+                        0,
+                        0,
+                        1.4992537498474121,
+                        0,
+                        -0.01304924488067627,
+                        -0.0098279118537902832,
+                        0,
+                        1
+                      ]
+                    }
+                  },
                   "9AB2CF37-A36A-4A98-8357-AD514F180B14" : {
                     "overrides" : {
                       "children" : {
@@ -1432,7 +1518,7 @@
                           "material",
                           {
                             "typeName" : "String",
-                            "value" : "paintEnamelMatte"
+                            "value" : "plastic"
                           }
                         ],
                         [
@@ -1440,9 +1526,9 @@
                           {
                             "typeName" : "double4",
                             "value" : [
-                              0.33000001311302185,
-                              0.55000001192092896,
-                              0.10999999940395355,
+                              1,
+                              1,
+                              1,
                               1
                             ]
                           }
@@ -1703,21 +1789,21 @@
               "title" : "Field",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.8111763596534729,
-                  -2.557988487694729e-08,
-                  -0.58480161428451538,
+                  0.73910814523696899,
+                  -2.48841800498667e-08,
+                  0.67358678579330444,
                   0,
-                  -0.26227432489395142,
-                  0.89379066228866577,
-                  -0.36379987001419067,
+                  0.27029386162757874,
+                  0.91595751047134399,
+                  -0.29658591747283936,
                   0,
-                  0.52269023656845093,
-                  0.44848430156707764,
-                  0.72502189874649048,
+                  -0.61697685718536377,
+                  0.40127527713775635,
+                  0.67699158191680908,
                   0,
-                  0.38204121589660645,
-                  0.29757681488990784,
-                  0.52159452438354492,
+                  -0.33274301886558533,
+                  0.26712679862976074,
+                  0.56593054533004761,
                   1
                 ],
                 "sceneTransform" : [
