edit home ui design and app icon,fix bowling bug

--- a/ARTesting/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/ARTesting/Experience.rcproject/com.apple.RCFoundation.Project
@@ -791,7 +791,7 @@
                           "height",
                           {
                             "typeName" : "Double",
-                            "value" : 0.0019999999999999905
+                            "value" : 0.0019999999999999914
                           }
                         ],
                         [
@@ -1830,9 +1830,9 @@
                   0.66051089763641357,
                   0.69016385078430176,
                   0,
-                  -0.22376549243927002,
-                  0.40754160284996033,
-                  0.55911165475845337,
+                  -0.36313021183013916,
+                  0.66136503219604492,
+                  0.90733534097671509,
                   1
                 ],
                 "sceneTransform" : [
@@ -1889,8 +1889,8 @@
                                         "configuration" : {
                                           "force" : [
                                             0,
-                                            1.7384757029503817e-06,
-                                            -9.7222299575805664
+                                            2.3196853362605907e-06,
+                                            -12.972574234008789
                                           ],
                                           "target" : [
                                             "B5475850-2517-4CA2-91CF-17CF766ECD49"
@@ -1924,7 +1924,7 @@
                       "isEnabled" : true,
                       "isLooping" : false,
                       "isModal" : false,
-                      "name" : "Behavior",
+                      "name" : "shootBall",
                       "triggers" : [
                         {
                           "__content" : [
@@ -1972,7 +1972,7 @@
                       "isEnabled" : true,
                       "isLooping" : true,
                       "isModal" : false,
-                      "name" : "Behavior 2",
+                      "name" : "Game Start",
                       "triggers" : [
                         {
                           "__content" : [
@@ -2015,7 +2015,7 @@
                                     {
                                       "configurationBox" : {
                                         "configuration" : {
-                                          "targetScene" : "AA350764-D090-4D03-B2AB-1526620FB7EC"
+                                          "targetScene" : "7FECC674-8658-4978-9073-2ED261BAB549"
                                         },
                                         "name" : {
                                           "type" : "changeScene"
@@ -2045,7 +2045,7 @@
                       "isEnabled" : true,
                       "isLooping" : false,
                       "isModal" : false,
-                      "name" : "Behavior 1",
+                      "name" : "Restart Game",
                       "triggers" : [
                         {
                           "__content" : [
@@ -2271,7 +2271,7 @@
                         0,
                         0,
                         -2.9802322387695312e-08,
-                        -6.108830451965332,
+                        -4.2432646751403809,
                         1
                       ]
                     }
@@ -2365,9 +2365,9 @@
                         0,
                         1,
                         0,
-                        -0.15296527743339539,
-                        -2.9802322387695312e-08,
-                        -6.2617955207824707,
+                        -0.12248238921165466,
+                        0,
+                        -4.3657469749450684,
                         1
                       ]
                     }
@@ -2537,21 +2537,21 @@
                     },
                     "transform" : {
                       "matrix" : [
-                        3,
+                        5.6936726570129395,
                         0,
                         0,
                         0,
                         0,
-                        2.8977780342102051,
-                        -0.77645456790924072,
+                        5.499666690826416,
+                        -1.4736260175704956,
                         0,
                         0,
-                        0.77645456790924072,
-                        2.8977780342102051,
+                        1.4736260175704956,
+                        5.499666690826416,
                         0,
                         0,
                         0.65676230192184448,
-                        -6.1372237205505371,
+                        -4.1540470123291016,
                         1
                       ]
                     }
@@ -2644,9 +2644,9 @@
                         0,
                         1,
                         0,
-                        0.30613034963607788,
-                        -2.9802322387695312e-08,
-                        -6.4147605895996094,
+                        0.24496477842330933,
+                        0,
+                        -4.4913225173950195,
                         1
                       ]
                     }
@@ -2939,21 +2939,21 @@
                     },
                     "transform" : {
                       "matrix" : [
-                        3,
+                        4.4550576210021973,
                         0,
                         0,
                         0,
                         0,
-                        3,
+                        4.4550576210021973,
                         0,
                         0,
                         0,
                         0,
-                        3,
+                        4.4550576210021973,
                         0,
                         0,
                         0,
-                        -3.3259294033050537,
+                        -0.95455318689346313,
                         1
                       ]
                     }
@@ -3046,9 +3046,9 @@
                         0,
                         1,
                         0,
-                        0.15306517481803894,
-                        -2.9802322387695312e-08,
-                        -6.567725658416748,
+                        0.12248238921165466,
+                        0,
+                        -4.6328682899475098,
                         1
                       ]
                     }
@@ -3142,9 +3142,9 @@
                         0,
                         1,
                         0,
-                        1.2490009027033011e-16,
-                        -2.9802322387695312e-08,
-                        -6.4147605895996094,
+                        -4.163336342344337e-17,
+                        0,
+                        -4.4913225173950195,
                         1
                       ]
                     }
@@ -3238,9 +3238,9 @@
                         0,
                         1,
                         0,
-                        -0.45899572968482971,
-                        -2.9802322387695312e-08,
-                        -6.567725658416748,
+                        -0.37951070070266724,
+                        0,
+                        -4.6328682899475098,
                         1
                       ]
                     }
@@ -3333,9 +3333,9 @@
                         0,
                         1,
                         0,
-                        -0.15296527743339539,
-                        -2.9802322387695312e-08,
-                        -6.567725658416748,
+                        -0.12248238921165466,
+                        0,
+                        -4.6328682899475098,
                         1
                       ]
                     }
@@ -3429,9 +3429,9 @@
                         0,
                         1,
                         0,
-                        -0.30593055486679077,
-                        -2.9802322387695312e-08,
-                        -6.4147605895996094,
+                        -0.25702831149101257,
+                        0,
+                        -4.4913225173950195,
                         1
                       ]
                     }
@@ -3524,9 +3524,9 @@
                         0,
                         1,
                         0,
-                        0.45919573307037354,
-                        -2.9802322387695312e-08,
-                        -6.567725658416748,
+                        0.36744716763496399,
+                        0,
+                        -4.6328682899475098,
                         1
                       ]
                     }
@@ -3619,9 +3619,9 @@
                         0,
                         1,
                         0,
-                        0.15306517481803894,
-                        -2.9802322387695312e-08,
-                        -6.2617955207824707,
+                        0.12248238921165466,
+                        0,
+                        -4.3657469749450684,
                         1
                       ]
                     }
@@ -3642,21 +3642,21 @@
               "title" : "Bowling",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.99999964237213135,
-                  -1.3042181556954802e-08,
-                  -0.00090297358110547066,
+                  0.99994921684265137,
+                  8.5978291153310238e-09,
+                  0.010078422725200653,
                   0,
-                  -0.00037231371970847249,
-                  0.91103768348693848,
-                  -0.41232293844223022,
+                  0.0043027340434491634,
+                  0.90428632497787476,
+                  -0.42690479755401611,
                   0,
-                  0.00082266732351854444,
-                  0.41232308745384216,
-                  0.91103732585906982,
+                  -0.0091137774288654327,
+                  0.42692649364471436,
+                  0.90424048900604248,
                   0,
-                  -0.06890907883644104,
-                  1.4817900657653809,
-                  1.8351593017578125,
+                  0.044286772608757019,
+                  1.7487728595733643,
+                  7.5105361938476562,
                   1
                 ],
                 "sceneTransform" : [
